tests/semantic_errors/test16_3.tl
require "ifj21"

global name : function (integer)
function name    (a : number) end

function main()
end

main()
